<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="PRG_Fault_Axis_Y" Id="{a6b832b8-1474-4f6a-8409-3d45d73e6728}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM PRG_Fault_Axis_Y
VAR
	i					: INT;
	bTest				: BOOL;
END_VAR
VAR_IN_OUT
  aAlarms  : ARRAY[0..3] OF ST_Events;
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[ACT_FaultTrig();

(************************************** Faults reset **********************************************)
IF   bResetButtonRisingEdge THEN 
	FOR i := 0 TO 127 DO
		GVL_MASTER.stAlarms[1].aEventFlags[i] := FALSE;
	END_FOR
END_IF
//===============================================================
//Initialize event texts on first scan
IF NOT GVL_MASTER.stAlarms[1].bEventTextsSet THEN
	SetEventTexts();
	GVL_MASTER.stAlarms[1].bEventTextsSet := TRUE;
END_IF


(***************************************************************************************************)
//Immediate fault
GVL_MASTER.stAlarms[1].bImmediateFault := FALSE;
FOR i := 0 TO 32DO
	GVL_MASTER.stAlarms[1].bImmediateFault := GVL_MASTER.stAlarms[1].bImmediateFault OR GVL_MASTER.stAlarms[1].aEventFlags[i];
END_FOR

//Cycle stop fault
GVL_MASTER.stAlarms[1].bCycleStopFault := FALSE;
FOR i := 33 TO 79 DO
	GVL_MASTER.stAlarms[1].bCycleStopFault := GVL_MASTER.stAlarms[1].bCycleStopFault OR GVL_MASTER.stAlarms[1].aEventFlags[i];
END_FOR

//Cycle stop REQUEST
GVL_MASTER.stAlarms[1].bCycleStopRequest := FALSE;
FOR i := 80 TO 99 DO
	GVL_MASTER.stAlarms[1].bCycleStopRequest := GVL_MASTER.stAlarms[1].bCycleStopRequest OR GVL_MASTER.stAlarms[1].aEventFlags[i];
END_FOR
]]></ST>
    </Implementation>
    <Action Name="ACT_FaultTrig" Id="{0a8e718a-21d0-49a8-be4f-49225d977bb7}">
      <Implementation>
        <ST><![CDATA[//AXIS Y General Fault
IF (Y_Master_Y_Axis.refY_Axis.NcToPlc.ErrorCode <> 0) THEN
	GVL_MASTER.stAlarms[1].aEventFlags[1] := TRUE;
END_IF


//Station 1 - Axis Y Homing Time Out
GVL_MASTER.stAlarms[1].aEventTimers[80]
(IN := ((stMachineStatus.eMachineState = E_MachineState.SYSTEM_INITIALISING) AND 
NOT (Y_Master_Y_Axis.eState = E_AxisState.AXIS_READY)),PT:= T#30S );
IF GVL_MASTER.stAlarms[1].aEventTimers[80].Q  THEN 
	GVL_MASTER.stAlarms[1].aEventFlags[80] := TRUE;
END_IF

//Station 1 - Axis Y Out of limit
IF NOT (Y_Master_Y_Axis.posTarget > Y_Master_Y_Axis.fPositionLimitMin) OR
	NOT (Y_Master_Y_Axis.posTarget < Y_Master_Y_Axis.fPositionLimitMax) THEN 
	//GVL_MASTER.stAlarms[1].aEventFlags[81] := TRUE;
	//bTest									:= TRUE;
END_IF
]]></ST>
      </Implementation>
    </Action>
    <Method Name="SetEventTexts" Id="{8c5e025a-294c-4847-bae5-dde5faf5bb85}">
      <Declaration><![CDATA[METHOD SetEventTexts : BOOL
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[//Immediate Faults
GVL_MASTER.stAlarms[1].aEventTexts[1] := 'AXIS Y General Fault					';
GVL_MASTER.stAlarms[1].aEventTexts[2] := '';
GVL_MASTER.stAlarms[1].aEventTexts[3] := '';
GVL_MASTER.stAlarms[1].aEventTexts[4] := '';
GVL_MASTER.stAlarms[1].aEventTexts[5] := '';
GVL_MASTER.stAlarms[1].aEventTexts[6] := '';
GVL_MASTER.stAlarms[1].aEventTexts[7] := '';
GVL_MASTER.stAlarms[1].aEventTexts[8] := '';
GVL_MASTER.stAlarms[1].aEventTexts[9] := '';
GVL_MASTER.stAlarms[1].aEventTexts[10] := ''; 
GVL_MASTER.stAlarms[1].aEventTexts[11] := ''; 
GVL_MASTER.stAlarms[1].aEventTexts[12] := '';
GVL_MASTER.stAlarms[1].aEventTexts[13] := '';
GVL_MASTER.stAlarms[1].aEventTexts[14] := '';
GVL_MASTER.stAlarms[1].aEventTexts[15] := '';
GVL_MASTER.stAlarms[1].aEventTexts[16] := '';
GVL_MASTER.stAlarms[1].aEventTexts[17] := '';
GVL_MASTER.stAlarms[1].aEventTexts[18] := '';
GVL_MASTER.stAlarms[1].aEventTexts[19] := '';
GVL_MASTER.stAlarms[1].aEventTexts[20] := '';
GVL_MASTER.stAlarms[1].aEventTexts[21] := '';
GVL_MASTER.stAlarms[1].aEventTexts[22] := '';
GVL_MASTER.stAlarms[1].aEventTexts[23] := '';
GVL_MASTER.stAlarms[1].aEventTexts[24] := '';
GVL_MASTER.stAlarms[1].aEventTexts[25] := '';
GVL_MASTER.stAlarms[1].aEventTexts[36] := '';

//Cycle Stop Requests

GVL_MASTER.stAlarms[1].aEventTexts[80] := 'Station 1 - Axis Y Homing Time Out';
GVL_MASTER.stAlarms[1].aEventTexts[81] := 'Station 1 - Axis Y Out of limit';
GVL_MASTER.stAlarms[1].aEventTexts[82] := '';

GVL_MASTER.stAlarms[1].aEventTexts[84] := '';
GVL_MASTER.stAlarms[1].aEventTexts[85] := '';
GVL_MASTER.stAlarms[1].aEventTexts[86] := '';
GVL_MASTER.stAlarms[1].aEventTexts[87] := ''; 
GVL_MASTER.stAlarms[1].aEventTexts[88] := '';
GVL_MASTER.stAlarms[1].aEventTexts[89] := '';


]]></ST>
      </Implementation>
    </Method>
    <LineIds Name="PRG_Fault_Axis_Y">
      <LineId Id="6" Count="33" />
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="PRG_Fault_Axis_Y.ACT_FaultTrig">
      <LineId Id="114" Count="2" />
      <LineId Id="112" Count="1" />
      <LineId Id="99" Count="0" />
      <LineId Id="2" Count="1" />
      <LineId Id="88" Count="1" />
      <LineId Id="4" Count="2" />
      <LineId Id="110" Count="0" />
      <LineId Id="104" Count="0" />
      <LineId Id="102" Count="1" />
      <LineId Id="1" Count="0" />
      <LineId Id="107" Count="0" />
      <LineId Id="105" Count="1" />
    </LineIds>
    <LineIds Name="PRG_Fault_Axis_Y.SetEventTexts">
      <LineId Id="6" Count="27" />
      <LineId Id="58" Count="10" />
      <LineId Id="46" Count="2" />
      <LineId Id="5" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>